--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 return;
             }
 
-            var url = "https://wa.me/" + encodeURIComponent(phoneNumber);
+            var url = "https://wa.me/" + encodeURIComponent('+91' + phoneNumber);
             window.open(url, '_blank');
         }
     </script>
